--- a/src/Component/OurClasses/AllClasses/AllClasses.css
+++ b/src/Component/OurClasses/AllClasses/AllClasses.css
@@ -5,3 +5,8 @@ img.check-mark {
     height: 19px;
     width: 19px;
 }
+.width108{
+    width: 108px;
+    text-align: center;
+    margin: auto;
+}
