--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ img, svg {
   vertical-align: middle;
   width: 100%;
 }
+.loading {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
